# idotmatrix

./: Cargo.toml  README.md
examples/cli/: bluetooth.rs  main.rs
src/: bluetooth.rs  commands.rs  lib.rs  main.rs
