[package]
name = "idotmatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

btleplug = "0.10.5"
uuid = "1.3.1"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.1"
lazy_static = "1.4.0"
colors-transform = "0.2.11"
